  * new cli parameter /processproducts productId [,productId ]*
  * added unit oszip
  * osparser: fileActionsMain: zipfile, unzipfile
  * new in file sections: zipfile <file or dir> <zipfile>
  * new in file sections: unzipfile <zipfile> <targetdir>
  * osparser: fix in Hasminimumspace
  * osparser: fix searchpath from %opsiScriptHelperPath% to %opsiScriptHelperPath%\lib; fixes #3975

-- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.36) stable; urgency=low

  * osdefinedfunctions: better errormessages
  * osdefinedfunctions: complete redesign of local var
  * osdefinedfunctions: now works also with recursive calls
  * oslog: fix: cleanup old partlogs
  * osparser: fix in md5sumfromfile (Linux)

-- Detlef Oertel <d.oertel@uib.de>  Wed, 13 Feb 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.35) stable; urgency=low

  * osparser: producestringlist: getsublist: with whitespaces around numbers
  * osmain: Loginscripts: do not break login script loop on reboots
  * oswebservice: getMapOfLoginscripts2Run: allscripts=false:
      we want to run the login script if installed
      or last successful action was uninstall

-- Detlef Oertel <d.oertel@uib.de>  Tue, 15 Jan 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.34) stable; urgency=low

  * osparser: producestringlist: getsublist: with string expression instead of numbers
  * osparser: producestringlist: createstringlist: fix: empty strings as argument allowed

-- Detlef Oertel <d.oertel@uib.de>  Thu, 10 Jan 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.33) stable; urgency=low

  * osconf: new config opsi-script.global.w10BitlockerSuspendOnReboot
  * osconf: new global config variable: w10BitlockerSuspendOnReboot (default= false)
  * osmain: buildPC: >=win 10 and  w10BitlockerSuspendOnReboot and (txrImmediateReboot or txrImmediateReboot)
     then suspend bitlocker for 1 reboot     fixes: #3816
  * new units oswmi, utilwmi
  * osparser: producestringlist: